fix: remove unnecessary modules

--- a/src/js/home/home.html
+++ b/src/js/home/home.html
@@ -1,20 +1,18 @@
 <div class="home-page">
 
-  <!-- Splash banner that only shows when not logged in -->
-  <header class="banner"
-       show-authed="false">
+  <div class="banner">
     <div class="container">
-      <h1 class="logo-font"
-          ng-bind="::$ctrl.appName | lowercase"></h1>
-      <p>Welcome, Datalover.</p>
+      <p>Welcome, data lover</p>
     </div>
-  </header>
+  </div>
 
   <main class="container page">
     <section class="row">
       <!-- Main view -->
       <div class="col-12">
-        Insert your chart component in here
+        <div>
+          <p>ℹ️ Insert your chart component in here</p>
+        </div>
       </div>
 
       <!-- End the row & container divs -->
